# ph_macros

./: CMakeLists.txt
include/ph_macros/: macros.hpp
src/: CMakeLists.txt  macros.cpp
tests/: CMakeLists.txt  testlib.cpp
